updated html css icon

--- a/index.html
+++ b/index.html
@@ -1,1 +1,17 @@
 
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Home tutor</title>
+    <link rel="stylesheet" href="style.css">
+    <link rel="icon" href="favicon.ico">
+</head>
+<body>
+    <div class="head">
+        <h1>I'm Nikhil</h1>
+        <p>A web designer</p>
+    </div>
+</body>
+</html>
