--- a/index.html
+++ b/index.html
@@ -9,9 +9,15 @@
     <link rel="icon" href="favicon.ico">
 </head>
 <body>
-    <div class="head">
+    <div class="top-container">
         <h1>I'm Nikhil</h1>
         <p>A web designer</p>
+    </div>
+    <div class="middle-container">
+        <h1>hello</h1>
+    </div>
+    <div class="bottem-container">
+        <h1>hello</h1>
     </div>
 </body>
 </html>
