--- a/index.html
+++ b/index.html
@@ -1,6 +1,6 @@
-
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -8,16 +8,28 @@
     <link rel="stylesheet" href="style.css">
     <link rel="icon" href="favicon.ico">
 </head>
+
 <body>
-    <div class="top-container">
-        <h1>I'm Nikhil</h1>
-        <p>A web designer</p>
+
+    <div class="top-container ">
+        <div>
+            <!-- <img  src="images/cloud1.png" alt="cloud"> -->
+            <h1>I'm Nikhil</h1>
+            <p>A</p>
+            <p class="pro">Pro</p>
+            <p>grammer</p>
+            <!-- <img src="images/cloud1.png" alt="">
+            <img src="images\mountain.jpg" alt="mountain"> -->
+
+        </div>
+
     </div>
-    <div class="middle-container">
+    <div class="middle-container ">
         <h1>hello</h1>
     </div>
-    <div class="bottem-container">
-        <h1>hello</h1>
+    <div class="bottem-container ">
+
     </div>
 </body>
+
 </html>
